site/content/xap/10.2/admin/web-management-console.markdown
---
type: post102
title:  Web Management Console
categories: XAP102ADM
parent: none
weight: 200
---



The XAP web management console is a web application which was designed to enable XAP users to quickly understand the state of a running XAP cluster and monitor the running components, i.e. physical hosts, JVMs and deployed processing units.


<br>

{{%fpanel%}}

[Web Management Console](./web-management-console-console.html){{<wbr>}}
The web management console is a new user interface for XAP allowing users to deploy, manage and monitor their Processing Units and Applications

[Configuration](./web-management-console-configuration.html){{<wbr>}}
Configuring various options and customizing the management console.

[Starting the console](./web-management-console-starting.html){{<wbr>}}
Reviews the different deployment option of the web management console

[Hosts](./web-management-hosts-view.html){{<wbr>}}
This screen enables you to monitor the physical resources of your cluster.

[Menu Bar](./web-management-common-view.html){{<wbr>}}
The menu bar for the web management UI is common across all tabs. It lets you deploy Processing Units and Spaces, view Alerts and Events.

[Processing Units](./web-management-pu.html){{<wbr>}}
This screen enables you to monitor the physical resources of your processing units.

[Spaces](./web-management-data-grid-view.html){{<wbr>}}
The Data Grid view provides Space and Space instance navigation, for querying data and viewing class metadata.

[Monitoring](./web-management-monitoring.html){{<wbr>}}
This view displays monitoring information about the deployed topology and its components. You can configure your own templates.

{{%/fpanel%}}

<br>

#### Additional Resources
{{%youtube "9nFkfj2o5hk"  "Web Management Console"%}}



